@@ -1,0 +1,9 @@
+# $Id: Makefile.am,v 1.6 2001/09/22 16:25:29 mej Exp $
+
+lib_LTLIBRARIES = libast.la
+
+INCLUDES = -I$(top_srcdir)/include
+
+libast_la_SOURCES = conf.c debug.c file.c mem.c msgs.c strings.c snprintf.c
+
+libast_la_LDFLAGS = -version-info 1:3:0
