@@ -1,6 +1,6 @@
 
 /*
- * Copyright (C) 1997-2001, Michael Jennings
+ * Copyright (C) 1997-2002, Michael Jennings
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to
