@@ -1,10 +1,10 @@
 # $Id$
 
-bin_PROGRAMS = libast-test
+EXTRA_PROGRAMS = libast-test
 
 libast_test_SOURCES = test.c test.h
-libast_test_DEPENDENCIES = $(top_builddir)/libast.la
-libast_test_LDADD = $(top_builddir)/libast.la
+libast_test_DEPENDENCIES = $(top_builddir)/src/libast.la
+libast_test_LDADD = $(top_builddir)/src/libast.la
 
 test: libast-test
 	$(top_builddir)/test/libast-test
